--- a/src/views/common/navbar.html
+++ b/src/views/common/navbar.html
@@ -27,7 +27,7 @@
         <a class="dropdown-item" href="#"><i class="fa fa-user"></i> Profile</a>
         <a class="dropdown-item" href="#"><i class="fa fa-wrench"></i> Setting</a>
         <div class="divider"></div>
-        <a class="dropdown-item" href="#"><i class="fa fa-lock"></i> Logout</a>
+        <a class="dropdown-item" href="#" ng-click="logout();"><i class="fa fa-lock"></i> Logout</a>
       </div>
     </li>
 
