--- a/src/views/common/sidebar-nav.html
+++ b/src/views/common/sidebar-nav.html
@@ -2,19 +2,19 @@
   <nav class="sidebar-nav">
     <ul class="nav">
       <li class="nav-item">
-        <a class="nav-link" ui-sref-active="active" ui-sref="app.main"><i class="icon-speedometer"></i> Dashboard</a>
+        <a class="nav-link" ui-sref-active="active" ui-sref="app.main"><i class="fa fa-home"></i> Dashboard</a>
       </li>
       <li class="nav-item nav-dropdown" >
-        <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-puzzle"></i> Access Control</a>
-        <ul class="nav-dropdown-items">
+        <a class="nav-link nav-dropdown-toggle" href="#"><i class="fa fa-gears"></i> Access Control</a>
+        <ul class="nav-dropdown-items" style="padding-left: 10px;">
           <li class="nav-item">
-            <a class="nav-link" ui-sref-active="active" ui-sref="app.userList"><i class="icon-puzzle"></i> User</a>
+            <a class="nav-link" ui-sref-active="active" ui-sref="app.userList"><i class="fa fa-user-o"></i> User</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" ui-sref-active="active" ui-sref="app.role"><i class="icon-puzzle"></i> Role </a>
+            <a class="nav-link" ui-sref-active="active" ui-sref="app.roleList"><i class="fa fa-tasks"></i> Role </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" ui-sref-active="active" ui-sref="app.permission"><i class="icon-puzzle"></i> Permission </a>
+            <a class="nav-link" ui-sref-active="active" ui-sref="app.permissionList"><i class="fa fa-low-vision"></i> Permission </a>
           </li>
         </ul>
       </li>
