--- a/src/views/pages/login.html
+++ b/src/views/pages/login.html
@@ -25,7 +25,7 @@
               </div>
             </div>
           </div>
-          <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
+          <!-- <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
             <div class="card-body text-center">
               <div>
                 <h2>Sign up</h2>
@@ -33,7 +33,7 @@
                 <button type="button" class="btn btn-primary active mt-3">Register Now!</button>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
